# wheeltec_robot_chair

./: .gitattributes  .gitgnore
darknet_ros/: README.md
darknet_ros/darknet/: Makefile
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: yolov3-tiny-blocks.yaml  yolov3-tiny-light.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
devel/include/amcl/: AMCLConfig.h
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/include/astra_camera/: AstraConfig.h
devel/include/bodyreader/: body.h  bodyList.h  bodyposture.h  joint.h  locked_char_rgb.h  lockedmask_w_h.h  maskdata.h  vector2f.h  vector3f.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/ipa_building_msgs/: CheckCoverageRequest.h  CheckCoverageResponse.h  ExtractAreaMapFromLabeledMapRequest.h  ExtractAreaMapFromLabeledMapResponse.h  FindRoomSequenceWithCheckpointsAction.h  FindRoomSequenceWithCheckpointsActionFeedback.h  FindRoomSequenceWithCheckpointsActionGoal.h  FindRoomSequenceWithCheckpointsActionResult.h  FindRoomSequenceWithCheckpointsFeedback.h  FindRoomSequenceWithCheckpointsGoal.h  FindRoomSequenceWithCheckpointsResult.h  MapSegmentationAction.h  MapSegmentationActionFeedback.h  MapSegmentationActionGoal.h  MapSegmentationActionResult.h  MapSegmentationFeedback.h  MapSegmentationGoal.h  MapSegmentationResult.h  RoomExplorationAction.h  RoomExplorationActionFeedback.h  RoomExplorationActionGoal.h  RoomExplorationActionResult.h  RoomExplorationFeedback.h  RoomExplorationGoal.h  RoomExplorationResult.h  RoomInformation.h  RoomSequence.h
devel/include/ipa_building_navigation/: BuildingNavigationConfig.h
devel/include/ipa_room_exploration/: RoomExplorationConfig.h
devel/include/laser_double/: difop.h
devel/include/lslidar_msgs/: LslidarDifop.h  LslidarPacket.h  LslidarPoint.h  LslidarScan.h  LslidarSweep.h
devel/include/simple_follower/: Params_colorConfig.h
devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
devel/include/wheeltec_multi/: avoid.h
devel/include/wheeltec_yolo_action/: CtrlData.h  hsvConfig.h  paramsConfig.h  position.h
devel/include/xf_mic_asr_offline_circle/: Get_Awake_Angle_srvRequest.h  Get_Awake_Angle_srvResponse.h  Get_Major_Mic_srvRequest.h  Get_Major_Mic_srvResponse.h  Get_Offline_Result_srvRequest.h  Get_Offline_Result_srvResponse.h  Pcm_Msg.h  Set_Awake_Word_srvRequest.h  Set_Awake_Word_srvResponse.h  Set_Led_On_srvRequest.h  Set_Led_On_srvResponse.h  Set_Major_Mic_srvRequest.h  Set_Major_Mic_srvResponse.h  Start_Record_srvRequest.h  Start_Record_srvResponse.h  position.h
install/: local_setup.sh  setup.sh
log/: latest_build  latest_version-check
src/: ROS-noetic功能指令.txt  ROS2-V5.0(humble)常用指令.txt  manage_nested_repos.sh
src/auto_recharge_ros2/: Charger_Position.json  MANIFEST.in  setup.cfg  setup.py
src/dual_laser_merger/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/dual_laser_merger/.github/workflows/: build_test.yml
src/dual_laser_merger/bag/dual_lidar/: metadata.yaml
src/dual_laser_merger/config/: rviz_config.rviz
src/dual_laser_merger/include/dual_laser_merger/: dual_laser_merger.hpp
src/dual_laser_merger/install/: local_setup.sh  setup.sh
src/dual_laser_merger/install/dual_laser_merger/lib/dual_laser_merger/: dual_laser_merger_node
src/dual_laser_merger/install/dual_laser_merger/share/ament_index/resource_index/package_run_dependencies/: dual_laser_merger
src/dual_laser_merger/install/dual_laser_merger/share/ament_index/resource_index/parent_prefix_path/: dual_laser_merger
src/dual_laser_merger/install/dual_laser_merger/share/ament_index/resource_index/rclcpp_components/: dual_laser_merger
src/dual_laser_merger/install/dual_laser_merger/share/dual_laser_merger/: demo_laser_merger.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/dual_laser_merger/install/dual_laser_merger/share/dual_laser_merger/bag/dual_lidar/: metadata.yaml
src/dual_laser_merger/install/dual_laser_merger/share/dual_laser_merger/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  dual_laser_mergerConfig-version.cmake  dual_laser_mergerConfig.cmake
src/dual_laser_merger/install/dual_laser_merger/share/dual_laser_merger/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
src/dual_laser_merger/launch/: demo_laser_merger.launch.py  dual_laser_merger.launch.py
src/dual_laser_merger/log/: latest_build  latest_list
src/dual_laser_merger/scripts/: run_dual_laser_merger.sh  setup_env.sh
src/dual_laser_merger/src/: dual_laser_merger.cpp
src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/laser_double/: CMakeLists.txt  package.xml
src/laser_double/launch/: laser_double.launch
src/laser_double/src/: laser_double.cpp
src/log/: latest_build
src/orb_slam_2_ros-master/: CMakeLists.txt  README.md
src/qt_ros_test/: open_qt.sh  qt_ros_test使用说明.docx  运行命令.txt
src/ros2_pointcloud_concatenate/: CMakeLists.txt  README.md  package.xml
src/ros2_pointcloud_concatenate/config/: concatenate_params.yaml
src/ros2_pointcloud_concatenate/include/pointcloud_concatenate/: pointcloud_concatenate.hpp
src/ros2_pointcloud_concatenate/launch/: pointcloud_concatenate.launch.py
src/ros2_pointcloud_concatenate/src/: pointcloud_concatenate.cpp  pointcloud_concatenate_node.cpp
src/simple_follower/: CMakeLists.txt
src/tts_make_ros2/: CMakeLists.txt
src/turn_on_wheeltec_robot/: CMakeLists.txt  wheeltec_udev.sh
src/usb_cam-ros2/: CMakeLists.txt
src/wheeltec_aiui/: package.xml
src/wheeltec_gps/: readme.txt  wheeltec_gnss.sh
src/xf_mic_asr_offline_circle/: CMakeLists.txt
yesense_imu/: CMakeLists.txt  wheeltec_udev.sh
yesense_imu/launch/: tf.launch  yesense_ahrs.launch
yesense_imu/rviz/: yesense.rviz
yesense_imu/src/: imu_tf.cpp  yesense_driver.cpp
(+12126 files in other folders)
